tests/snapshots/edit__add_input@multiline_no_trailing_comma_outputs_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixpkgs-unstable";

    deadnix = {
      url = "github:astro/deadnix";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    vmsh.url = "github:mic92/vmsh";
  };

  outputs = {
    self,
    nixpkgs,
    deadnix,
    vmsh
  }: let
    system = "x86_64-linux";
  in { };
}
