tests/snapshots/edit__add_input@outputs_no_space_add_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    vmsh.url = "github:mic92/vmsh";
  };

  outputs = {self, nixpkgs, vmsh}:
    { };
}
